installed three js

--- a/src/templates/layouts/base.twig
+++ b/src/templates/layouts/base.twig
@@ -26,9 +26,9 @@
 
 <body class="{{body_class}}">
   {% block header %}
-    {% include 'components/header.twig' %}
+    {# {% include 'components/header.twig' %} #}
   {% endblock %}
-  
+
 
   <main class="o-wrapper">
     {% block content %}
@@ -37,7 +37,7 @@
   </main>
 
   {% block footer %}
-    {% include 'components/footer.twig' %}
+    {# {% include 'components/footer.twig' %} #}
   {% endblock %}
 </body>
 </html>
