--- a/src/styles/elements/_html.scss
+++ b/src/styles/elements/_html.scss
@@ -13,7 +13,8 @@
  */
 
 html {
-  background: $color-bg;
+  // background: $color-bg;
+  background: #e7daca;
   color: $color-text;
   font-family: $font-sans-serif;
   font-size: 0.8125rem; /* [1] */ /* 13px */
