--- a/src/styles/elements/_html.scss
+++ b/src/styles/elements/_html.scss
@@ -14,7 +14,8 @@
 
 html {
   // background: $color-bg;
-  background: #e7daca;
+  // background: #e7daca;
+  background: rgba(255,255,255,0);
   color: $color-text;
   font-family: $font-sans-serif;
   font-size: 0.8125rem; /* [1] */ /* 13px */
