--- a/src/styles/elements/_lists.scss
+++ b/src/styles/elements/_lists.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 
   > ul,
   > ol {
